--- a/readme.adoc
+++ b/readme.adoc
@@ -10,21 +10,21 @@ The API documentation can be found at the following location: https://bddtrader.
 
 The goal of the different exercises included writing API tests that:
 
-• Retrieved resources with GET queries
+• Retrieved resources with **GET queries**
 
 • Located items using JSON Path 
 
 • Checked resources using Hamcrest Matchers
 
-• Created new resources with POST methods
+• Created new resources with **POST methods**
 
-• Updated resources using PUT methods
+• Updated resources using **PUT methods**
 
-• Deleted resource using DELETE request
+• Deleted resource using **DELETE request**
 
 # Techniques Learned
 
-I learned how to work with **JSON Path** to find an item within the JSON and then use **Hamcrest Matcher** to make assertions about what should be in the JSON. We also covered a complex example using **Groovy Closure** and **JSON expressions that return collections**.   
+I learned how to work with **JSON Path** to find an item within the JSON and then use **Hamcrest Matcher** to make assertions about what should be in the JSON. We also covered **JSON expressions that return collections**.   
 
 I also got to practise using using a variety of API methods, see the list under the goals section above. 
 
